# project_cv_analyzer

./: .gitignore  pyproject.toml  requirements.txt  setup.bat  vercel.json
api/: handler.py  index.py
backend/: .env.example  app.py  requirements.txt  test_resume.txt
backend-deploy/: .vercelignore  pyproject.toml  requirements.txt  vercel.json
backend-deploy/api/: handler.py
backend-deploy/backend/: app.py  check_blogs.py
backend-deploy/backend/routes/: admin.py  ai.py  auth.py  blog.py  chatbot.py
backend-deploy/backend/utils/: ai_processor.py  file_storage.py  firebase_auth.py  firebase_config.py  firestore_db.py  openai_helper.py
backend/routes/: __init__.py  ai.py  applications.py  auth.py  chatbot.py  jobs.py  upload.py
backend/utils/: __init__.py  ai_processor.py  firebase_config.py.corrupted  firestore_db.py  gemini_helper.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  firebase.js  index.css
frontend/src/components/: Navbar.js
frontend/src/components/chatbot/: ChatBotButton.js  ChatWindow.js  MessageBubble.js  SuggestedPrompts.js
frontend/src/context/: AuthContext.js
frontend/src/hooks/: useFileUpload.js
frontend/src/pages/: AIInterview.js  AdminDashboard.js  Applications.js  BlogDetails.js  Blogs.js  CVAnalysisResults.js  CVBuilder.js  CVUpload.js  Dashboard.js  Home.js  JobDetails.js  Jobs.js  Login.js  Profile.js  Recommendations.js  RecruiterDashboard.js  RecruiterJobs.js  Register.js
frontend/src/services/: api.js
